--- a/FixInvoicingPrices/App.config
+++ b/FixInvoicingPrices/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="FixInvoicingPrices.Properties.Settings.DBConnection"
-            connectionString="Data Source=DESKTOP-OTQKT5I;Initial Catalog=ASFuelControlDB_Meleneklis;Integrated Security=True;Connect Timeout=300" />
+            connectionString="Data Source=DESKTOP-OTQKT5I;Initial Catalog=ASFuelControlDB;Integrated Security=True;Connect Timeout=300" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
