--- a/ASFuelControl.Communication/app.config
+++ b/ASFuelControl.Communication/app.config
@@ -2,15 +2,14 @@
 <configuration>
    <system.serviceModel>
         <bindings>
-            <basicHttpBinding>
-                <binding name="achilleas_fuelflow_receiptSoap" />
-            </basicHttpBinding>
+             <basicHttpBinding>
+                  <binding name="BasicHttpBinding_IPykServices_soap" />
+             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://eisrek.mygsi.eu/achilleas-fuelflow.asmx"
-                binding="basicHttpBinding" bindingConfiguration="achilleas_fuelflow_receiptSoap"
-                contract="FuelFlowService.achilleas_fuelflow_receiptSoap"
-                name="achilleas_fuelflow_receiptSoap" />
+             <endpoint address="http://ca-pykserver-prod.calmocean-945e178e.westeurope.azurecontainerapps.io:443/achilleas-fuelflow.asmx"
+                  binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPykServices_soap"
+                  contract="FuelFlowService.IPykServices" name="BasicHttpBinding_IPykServices_soap" />
         </client>
     </system.serviceModel>
 	<startup>
