--- a/ASFuelControl.Communication/app.config
+++ b/ASFuelControl.Communication/app.config
@@ -7,7 +7,7 @@
              </basicHttpBinding>
         </bindings>
         <client>
-             <endpoint address="http://ca-pykserver-prod.calmocean-945e178e.westeurope.azurecontainerapps.io:443/achilleas-fuelflow.asmx"
+             <endpoint address="http://ca-pykserver.thankfuldune-a390147c.westeurope.azurecontainerapps.io:443/achilleas-fuelflow.asmx"
                   binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPykServices_soap"
                   contract="FuelFlowService.IPykServices" name="BasicHttpBinding_IPykServices_soap" />
         </client>
