--- a/ASFuelControl.Windows/app.config
+++ b/ASFuelControl.Windows/app.config
@@ -26,15 +26,21 @@
 		  <security mode="Transport" />
 		</binding>
         <binding name="BasicHttpBinding_IService1" />
-      </basicHttpBinding>
+        <binding name="BasicHttpBinding_IPYKServices_soap"/>
+	  </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="https://test-pratiria-ws.aade.gr/achilleas-fuelflow.asmx"
         binding="basicHttpBinding" bindingConfiguration="achilleas_fuelflow_receiptSoap"
-        contract="FuelFlowService.achilleas_fuelflow_receiptSoap" name="achilleas_fuelflow_receiptSoap" />
+        contract="FuelFlowService.IPykServices" name="achilleas_fuelflow_receiptSoap" />
       <endpoint address="http://www.5gsms.com/Service1.svc" binding="basicHttpBinding"
         bindingConfiguration="BasicHttpBinding_IService1" contract="SmsService.IService1"
         name="BasicHttpBinding_IService1" />
+      <endpoint address="https://ca-pykserver.thankfuldune-a390147c.westeurope.azurecontainerapps.io/achilleas-fuelflow.asmx" 
+		binding="basicHttpBinding" 
+		bindingConfiguration="BasicHttpBinding_IPYKServices_soap" 
+		contract="WS_FUELS.IPYKServices" 
+		name="BasicHttpBinding_IPYKServices_soap"/>
     </client>
   </system.serviceModel>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup>
