--- a/ASFuelControl.Windows/app.config
+++ b/ASFuelControl.Windows/app.config
@@ -12,12 +12,12 @@
 </configSections>
 <connectionStrings>
     <add name="ASFuelControl.Windows.Properties.Settings.DBConnection"
-        connectionString="Data Source=DESKTOP-OTQKT5I;Initial Catalog=ASFuelControlDB;Integrated Security=True;Connect Timeout=300"
+        connectionString="Data Source=DESKTOP-OTQKT5I;Initial Catalog=ASFuelControlDB2;Integrated Security=True;Connect Timeout=300"
         providerName="System.Data.SqlClient" />
     <add name="ASFuelControl.Windows.Properties.Settings.DBMasterConnection"
         connectionString="Data Source=DESKTOP-OTQKT5I;Initial Catalog=master;Integrated Security=True"
         providerName="System.Data.SqlClient" />
-    <add name="ASFuelControlDB_Connection" connectionString="Data Source=DESKTOP-OTQKT5I;Initial Catalog=ASFuelControlDB;Integrated Security=True;Connect Timeout=100" />
+    <add name="ASFuelControlDB_Connection" connectionString="Data Source=DESKTOP-OTQKT5I;Initial Catalog=ASFuelControlDB2;Integrated Security=True;Connect Timeout=100" />
 </connectionStrings>
   <system.serviceModel>
     <bindings>
